Update client area padding, fix navigation menu link, and improve client logo alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2907,7 +2907,6 @@ p {
 /*===========================
        25.CLIENT css 
 ===========================*/
-/*===== Client Logo Two =====*/
 .client-area {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -2915,6 +2914,11 @@ p {
 
 .client-logo-2 {
   background-color: #f4f6f7;
+}
+
+.client-active .slick-dots {
+  text-align: center;
+  margin-top: 205px;
 }
 
 /*===========================
